Implement Google Analytics across all public pages

--- a/public/connections.html
+++ b/public/connections.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connection Monitor - LearnToBot Class</title>
     <link rel="stylesheet" href="navbar.css">
+    <script src="analytics.js"></script> <!-- Analytics Telemetry -->
     <style>
         * {
             margin: 0;
