--- a/public/teacher.html
+++ b/public/teacher.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teacher Control Panel - LearnToBot Class</title>
+    <script src="analytics.js"></script> <!-- Analytics Telemetry -->
     <style>
         /* Styles delegated to kids-theme.css */
         /* Link kids-theme explicitly as it might not be linked in teacher.html */
