--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="kids-theme.css">
     <link rel="stylesheet" href="mobile.css">
     <link rel="stylesheet" href="navbar.css">
+    <script src="analytics.js"></script> <!-- Analytics Telemetry -->
     <style>
         :root {
             --gold: #FFD700;
