--- a/public/prizes.html
+++ b/public/prizes.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="kids-theme.css">
     <link rel="stylesheet" href="mobile.css">
     <link rel="stylesheet" href="navbar.css">
+    <script src="analytics.js"></script> <!-- Analytics Telemetry -->
     <style>
         * {
             margin: 0;
