--- a/public/ratings.html
+++ b/public/ratings.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ratings Dashboard - LearnToBot Class</title>
+    <script src="analytics.js"></script> <!-- Analytics Telemetry -->
     <style>
         * {
             margin: 0;
