--- a/public/prizes.html
+++ b/public/prizes.html
@@ -205,9 +205,7 @@
                 <li><a href="/child-progress.html" class="navbar-link">Student Progress</a></li>
                 <li><a href="/prizes.html" class="navbar-link active">Prizes</a></li>
                 <li><a href="/leaderboard.html" class="navbar-link">Leaders</a></li>
-                <li><a href="/instructor-dashboard.html?tab=analytics" class="navbar-link" id="navAnalytics"
-                        style="display: none;">Analytics</a></li>
-                <li><a href="/instructor-dashboard.html" class="navbar-link">Instructors</a></li>
+
             </ul>
 
             <div class="navbar-auth">
@@ -231,6 +229,8 @@
         <div class="header">
             <h1>🏆 Reward Store</h1>
             <p>Complete projects, earn points, and win awesome prizes!</p>
+            <p style="color: #FBBF24; font-weight: 600; margin-top: 10px; font-size: 1.1em;">⚠️ Note: Only one prize
+                redemption allowed per week per student.</p>
         </div>
 
         <div class="prizes-grid" id="prizesGrid">
